--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="demo.html">Live Demo</a>
                 <a href="asana.html">Asana</a>
                 <a href="monday.html">Monday.com</a>
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </nav>
@@ -46,7 +46,7 @@
                 <span class="gradient-text">Customer Implementations</span>
             </h1>
             <p class="hero-subtitle">
-                Compare Asana, Monday.com, and Airtable with interactive demos, detailed guides, 
+                Compare Asana, Monday.com, and Smartsheet with interactive demos, detailed guides, 
                 and expert recommendations tailored for customer success teams.
             </p>
             <div class="hero-buttons">
@@ -186,41 +186,41 @@
                     </div>
                 </div>
 
-                <!-- Airtable Card -->
-                <div class="platform-card airtable-card">
+                <!-- Smartsheet Card -->
+                <div class="platform-card smartsheet-card">
                     <div class="platform-header">
-                        <h3>Airtable</h3>
-                        <span class="badge">Most Powerful</span>
+                        <h3>Smartsheet</h3>
+                        <span class="badge">Enterprise Grade</span>
                     </div>
                     <div class="platform-body">
                         <p class="platform-description">
-                            Database powerhouse with unlimited customization. Best for complex, scalable operations.
+                            Powerful spreadsheet-based platform with enterprise features. Best for organizations with existing Smartsheet infrastructure.
                         </p>
                         <div class="platform-stats">
                             <div class="stat">
                                 <div class="stat-label">Setup Time</div>
-                                <div class="stat-value">4-5 weeks</div>
+                                <div class="stat-value">2-3 weeks</div>
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Learning</div>
-                                <div class="stat-value">Moderate</div>
+                                <div class="stat-value">Easy</div>
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Cost</div>
-                                <div class="stat-value">$400/mo</div>
+                                <div class="stat-value">$350/mo</div>
                             </div>
                         </div>
                         <ul class="feature-list">
-                            <li>Relational database power</li>
-                            <li>150+ custom fields</li>
-                            <li>Advanced formulas</li>
-                            <li>Custom interfaces</li>
-                            <li>Best for 50+ customers</li>
+                            <li>Familiar spreadsheet interface</li>
+                            <li>Advanced workflow automation</li>
+                            <li>Enterprise security & compliance</li>
+                            <li>Powerful integrations</li>
+                            <li>Resource management built-in</li>
                         </ul>
                     </div>
                     <div class="platform-footer">
-                        <a href="airtable.html" class="btn btn-platform airtable-btn">
-                            View Airtable Guide
+                        <a href="smartsheet.html" class="btn btn-platform smartsheet-btn">
+                            View Smartsheet Guide
                         </a>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                     <div class="comparison-row header-row">
                         <div class="comparison-cell">Feature</div>
                         <div class="comparison-cell">Monday.com</div>
-                        <div class="comparison-cell">Airtable</div>
+                        <div class="comparison-cell">Smartsheet</div>
                         <div class="comparison-cell">Asana</div>
                     </div>
                     <div class="comparison-row">
@@ -290,7 +290,7 @@
                     <div class="comparison-row">
                         <div class="comparison-cell">Customization</div>
                         <div class="comparison-cell">⭐⭐⭐⭐</div>
-                        <div class="comparison-cell">⭐⭐⭐⭐⭐</div>
+                        <div class="comparison-cell">⭐⭐⭐⭐</div>
                         <div class="comparison-cell">⭐⭐⭐</div>
                     </div>
                     <div class="comparison-row">
@@ -340,10 +340,10 @@
 
                 <div class="card">
                     <div class="card-icon">💪</div>
-                    <h3>For Long-term Power</h3>
-                    <p><strong>Choose Airtable</strong> if you're managing 50+ customers with complex data relationships and need maximum flexibility as you scale.</p>
-                    <a href="airtable.html" class="btn btn-secondary" style="margin-top: 1rem;">
-                        View Airtable Guide
+                    <h3>For Enterprise Scale</h3>
+                    <p><strong>Choose Smartsheet</strong> if you need enterprise security, advanced reporting dashboards, and integration with existing Smartsheet infrastructure.</p>
+                    <a href="smartsheet.html" class="btn btn-secondary" style="margin-top: 1rem;">
+                        View Smartsheet Guide
                     </a>
                 </div>
 
@@ -395,7 +395,7 @@
                 <a href="demo.html">Live Demo</a>
                 <a href="asana.html">Asana</a>
                 <a href="monday.html">Monday.com</a>
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </p>
             <p class="footer-copyright">
                 © 2025 Implementation Hub Guide | Built for Customer Success Teams
