--- a/demo.html
+++ b/demo.html
@@ -387,7 +387,7 @@
                 <a href="demo.html" class="active">Live Demo</a>
                 <a href="asana.html">Asana</a>
                 <a href="monday.html">Monday.com</a>
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </nav>
@@ -541,7 +541,7 @@
                     <div style="display: flex; gap: 1rem; margin-top: 1rem; flex-wrap: wrap;">
                         <a href="asana.html" class="btn asana-btn">Build in Asana</a>
                         <a href="monday.html" class="btn monday-btn">Build in Monday.com</a>
-                        <a href="airtable.html" class="btn airtable-btn">Build in Airtable</a>
+                        <a href="smartsheet.html" class="btn airtable-btn">Build in Smartsheet</a>
                     </div>
                 </div>
             </section>
@@ -557,7 +557,7 @@
                 <a href="demo.html">Live Demo</a> • 
                 <a href="asana.html">Asana</a> • 
                 <a href="monday.html">Monday.com</a> • 
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </p>
         </div>
     </footer>
