--- a/comparison.html
+++ b/comparison.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platform Comparison - Asana vs Monday.com vs Airtable</title>
+    <title>Platform Comparison - Asana vs Monday.com vs Smartsheet</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,14 +19,14 @@
                 <a href="comparison.html" class="active">Compare</a>
                 <a href="asana.html">Asana</a>
                 <a href="monday.html">Monday.com</a>
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </nav>
 
     <header class="guide-header">
         <h1 class="guide-title">Platform Comparison</h1>
-        <p class="guide-subtitle">Asana vs Monday.com vs Airtable - Find Your Perfect Match</p>
+        <p class="guide-subtitle">Asana vs Monday.com vs Smartsheet - Find Your Perfect Match</p>
     </header>
 
     <main class="container">
@@ -63,7 +63,7 @@
 
                     <div class="card" style="border-top: 4px solid var(--airtable-primary);">
                         <div class="card-icon">🗄️</div>
-                        <h3>Choose Airtable if:</h3>
+                        <h3>Choose Smartsheet if:</h3>
                         <ul style="text-align: left; list-style: none; padding: 0;">
                             <li>✅ Complex data relationships</li>
                             <li>✅ Powerful reporting needed</li>
@@ -85,7 +85,7 @@
                                 <th>Feature</th>
                                 <th class="asana-col">Asana</th>
                                 <th class="monday-col">Monday.com</th>
-                                <th class="airtable-col">Airtable</th>
+                                <th class="airtable-col">Smartsheet</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -245,7 +245,7 @@
                     </div>
 
                     <div class="card" style="border-top: 4px solid var(--airtable-primary);">
-                        <h3>Airtable Pricing</h3>
+                        <h3>Smartsheet Pricing</h3>
                         <div style="margin: 1.5rem 0;">
                             <div style="margin-bottom: 1rem;">
                                 <strong>Free:</strong> $0<br>
@@ -296,7 +296,7 @@
                             <td>⭐ Best fit - visual management</td>
                         </tr>
                         <tr>
-                            <td><strong>Airtable</strong></td>
+                            <td><strong>Smartsheet</strong></td>
                             <td>$100</td>
                             <td>6 hours</td>
                             <td>⚠️ Overkill for this size</td>
@@ -331,7 +331,7 @@
                             <td>✅ Good - reporting limitations</td>
                         </tr>
                         <tr>
-                            <td><strong>Airtable</strong></td>
+                            <td><strong>Smartsheet</strong></td>
                             <td>$400</td>
                             <td>12 hours</td>
                             <td>⭐ Excellent - fully utilizes power</td>
@@ -339,7 +339,7 @@
                     </tbody>
                 </table>
                 <div class="success-box">
-                    <strong>Recommendation:</strong> Airtable's complexity is justified at this scale. The relational database capabilities become essential for managing 50+ customer relationships.
+                    <strong>Recommendation:</strong> Smartsheet's complexity is justified at this scale. The relational database capabilities become essential for managing 50+ customer relationships.
                 </div>
 
                 <h3>Scenario 3: New to Project Management Tools</h3>
@@ -366,7 +366,7 @@
                             <td>2-3 days ⭐</td>
                         </tr>
                         <tr>
-                            <td><strong>Airtable</strong></td>
+                            <td><strong>Smartsheet</strong></td>
                             <td>Hard</td>
                             <td>4+ hours</td>
                             <td>2-3 weeks ⚠️</td>
@@ -429,7 +429,7 @@
                     </div>
 
                     <div class="card">
-                        <h3 style="color: var(--airtable-primary);">Airtable</h3>
+                        <h3 style="color: var(--airtable-primary);">Smartsheet</h3>
                         <div style="margin: 1rem 0;">
                             <h4 style="color: var(--success);">Strengths</h4>
                             <ul style="text-align: left;">
@@ -473,7 +473,7 @@
 
                     <div class="recommendation-card">
                         <div class="recommendation-icon">🥈</div>
-                        <h3>Second Choice: Airtable</h3>
+                        <h3>Second Choice: Smartsheet</h3>
                         <p class="recommendation-subtitle">Best Long-term Investment</p>
                         <ul>
                             <li>Takes longer to set up (4-5 weeks)</li>
@@ -482,7 +482,7 @@
                             <li>Future-proof architecture</li>
                             <li>Grows with you to 100+ customers</li>
                         </ul>
-                        <a href="airtable.html" class="btn btn-platform airtable-btn" style="margin-top: 1rem;">View Airtable Guide →</a>
+                        <a href="smartsheet.html" class="btn btn-platform airtable-btn" style="margin-top: 1rem;">View Smartsheet Guide →</a>
                     </div>
 
                     <div class="recommendation-card">
@@ -510,7 +510,7 @@
                     <p><strong>Week 2:</strong> Set up Monday.com (fastest ROI)</p>
                     <p><strong>Week 3:</strong> Test with 3-5 real customer projects</p>
                     <p><strong>Week 4:</strong> Expand to full team if satisfied</p>
-                    <p><strong>Month 3:</strong> Evaluate if you need Airtable's advanced features</p>
+                    <p><strong>Month 3:</strong> Evaluate if you need Smartsheet's advanced features</p>
                     <p><strong>Month 6:</strong> Make final platform decision</p>
                 </div>
             </section>
@@ -521,7 +521,7 @@
                 <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
                     <a href="asana.html" class="btn btn-platform asana-btn">Asana Setup Guide</a>
                     <a href="monday.html" class="btn btn-platform monday-btn">Monday.com Setup Guide</a>
-                    <a href="airtable.html" class="btn btn-platform airtable-btn">Airtable Setup Guide</a>
+                    <a href="smartsheet.html" class="btn btn-platform airtable-btn">Smartsheet Setup Guide</a>
                 </div>
             </div>
         </div>
@@ -536,7 +536,7 @@
                 <a href="comparison.html">Compare</a> • 
                 <a href="asana.html">Asana</a> • 
                 <a href="monday.html">Monday.com</a> • 
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </p>
         </div>
     </footer>
