--- a/asana.html
+++ b/asana.html
@@ -19,7 +19,7 @@
                 <a href="comparison.html">Compare</a>
                 <a href="asana.html" class="active">Asana</a>
                 <a href="monday.html">Monday.com</a>
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </nav>
@@ -427,7 +427,7 @@
                 <a href="comparison.html">Compare</a> • 
                 <a href="asana.html">Asana</a> • 
                 <a href="monday.html">Monday.com</a> • 
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </p>
         </div>
     </footer>
