--- a/index.html
+++ b/index.html
@@ -168,9 +168,12 @@
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Cost</div>
-                                <div class="stat-value">$320/mo</div>
+                                <div class="stat-value">$320/mo*</div>
                             </div>
                         </div>
+                        <p style="font-size: 0.875rem; color: var(--gray-600); margin-top: 1rem;">
+                            *Pro plan: $16-19/user/month for 17-20 users (annual billing)
+                        </p>
                         <ul class="feature-list">
                             <li>Beautiful visual interface</li>
                             <li>22+ custom column types</li>
@@ -207,9 +210,12 @@
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Cost</div>
-                                <div class="stat-value">$350/mo</div>
+                                <div class="stat-value">$350/mo*</div>
                             </div>
                         </div>
+                        <p style="font-size: 0.875rem; color: var(--gray-600); margin-top: 1rem;">
+                            *Enterprise plan: $25/user/month for 14 users (annual billing)
+                        </p>
                         <ul class="feature-list">
                             <li>Familiar spreadsheet interface</li>
                             <li>Advanced workflow automation</li>
@@ -246,9 +252,12 @@
                             </div>
                             <div class="stat">
                                 <div class="stat-label">Cost</div>
-                                <div class="stat-value">$220/mo</div>
+                                <div class="stat-value">$220/mo*</div>
                             </div>
                         </div>
+                        <p style="font-size: 0.875rem; color: var(--gray-600); margin-top: 1rem;">
+                            *Starter plan: $11/user/month for 20 users (annual billing)
+                        </p>
                         <ul class="feature-list">
                             <li>Proven task management</li>
                             <li>40+ task templates</li>
