--- a/monday.html
+++ b/monday.html
@@ -19,7 +19,7 @@
                 <a href="comparison.html">Compare</a>
                 <a href="asana.html">Asana</a>
                 <a href="monday.html" class="active">Monday.com</a>
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </nav>
@@ -379,7 +379,7 @@
                 <a href="comparison.html">Compare</a> • 
                 <a href="asana.html">Asana</a> • 
                 <a href="monday.html">Monday.com</a> • 
-                <a href="airtable.html">Airtable</a>
+                <a href="smartsheet.html">Smartsheet</a>
             </div>
         </div>
     </footer>
