--- a/smartsheet.html
+++ b/smartsheet.html
@@ -115,6 +115,96 @@
             </div>
         </section>
 
+        <!-- Pricing Section -->
+        <section class="section">
+            <div class="section-header">
+                <span class="section-badge">
+                    <span style="margin-right: 0.5rem;">💰</span>
+                    Pricing
+                </span>
+                <h2 class="section-title">Enterprise Investment</h2>
+            </div>
+
+            <div class="platform-grid">
+                <div class="platform-card smartsheet-card">
+                    <div class="platform-header">
+                        <h3>Business Plan</h3>
+                        <span class="badge">Small Teams</span>
+                    </div>
+                    <div class="platform-body">
+                        <div class="platform-stats">
+                            <div class="stat">
+                                <div class="stat-label">Cost</div>
+                                <div class="stat-value">$210/mo</div>
+                            </div>
+                            <div class="stat">
+                                <div class="stat-label">Users</div>
+                                <div class="stat-value">3-10 users</div>
+                            </div>
+                            <div class="stat">
+                                <div class="stat-label">Setup</div>
+                                <div class="stat-value">2-3 weeks</div>
+                            </div>
+                        </div>
+                        <p class="platform-description">
+                            $7/user/month minimum 3 users (billed annually). Good for small teams getting started with Smartsheet.
+                        </p>
+                        <ul class="feature-list">
+                            <li>Unlimited sheets and reports</li>
+                            <li>Grid, Gantt, Card, Calendar views</li>
+                            <li>Advanced formulas (200+ functions)</li>
+                            <li>Conditional formatting</li>
+                            <li>Forms and proofing</li>
+                            <li>Basic automation</li>
+                            <li>Document management</li>
+                            <li>Real-time collaboration</li>
+                            <li>Version history</li>
+                            <li>Mobile apps</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="platform-card smartsheet-card">
+                    <div class="platform-header">
+                        <h3>Enterprise Plan</h3>
+                        <span class="badge">Recommended</span>
+                    </div>
+                    <div class="platform-body">
+                        <div class="platform-stats">
+                            <div class="stat">
+                                <div class="stat-label">Cost</div>
+                                <div class="stat-value">$350/mo</div>
+                            </div>
+                            <div class="stat">
+                                <div class="stat-label">Users</div>
+                                <div class="stat-value">14 users</div>
+                            </div>
+                            <div class="stat">
+                                <div class="stat-label">Setup</div>
+                                <div class="stat-value">2-3 weeks</div>
+                            </div>
+                        </div>
+                        <p class="platform-description">
+                            $25/user/month (billed annually). Perfect for teams of 15-25 managing customer implementations with enterprise features.
+                        </p>
+                        <ul class="feature-list">
+                            <li>All Business features</li>
+                            <li>Advanced workflows & automation</li>
+                            <li>Dynamic dashboards (unlimited widgets)</li>
+                            <li>Resource management</li>
+                            <li>Portfolio rollup views</li>
+                            <li>Enterprise integrations (Salesforce, Jira, ServiceNow)</li>
+                            <li>SOC 2, HIPAA, GDPR compliance</li>
+                            <li>SSO & SAML authentication</li>
+                            <li>Advanced admin controls</li>
+                            <li>API access</li>
+                            <li>Dedicated support</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Best For Section -->
         <section class="section">
             <div class="section-header">
@@ -145,6 +235,43 @@
                     <div class="card-icon">📊</div>
                     <h3>Executive Reporting</h3>
                     <p>Leadership needs sophisticated dashboards with portfolio views, resource utilization, and executive-level KPIs.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Pros & Cons Section -->
+        <section class="section">
+            <div class="section-header">
+                <span class="section-badge">⚖️ Decision Factors</span>
+                <h2 class="section-title">Strengths & Considerations</h2>
+            </div>
+
+            <div class="comparison-quick">
+                <div class="comparison-table-modern">
+                    <div class="comparison-row header-row">
+                        <div class="comparison-cell">Strengths</div>
+                        <div class="comparison-cell">Considerations</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">✅ Familiar spreadsheet interface</div>
+                        <div class="comparison-cell">⚠️ Higher cost than alternatives ($350/mo)</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">✅ Enterprise-grade security & compliance</div>
+                        <div class="comparison-cell">⚠️ Steeper learning curve for advanced features</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">✅ Powerful integration ecosystem</div>
+                        <div class="comparison-cell">⚠️ Can become complex at scale</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">✅ Advanced reporting & dashboards</div>
+                        <div class="comparison-cell">⚠️ Mobile experience less polished</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">✅ Excellent resource management</div>
+                        <div class="comparison-cell">⚠️ Requires more setup time than Monday.com</div>
+                    </div>
                 </div>
             </div>
         </section>
