--- a/asana.html
+++ b/asana.html
@@ -251,24 +251,24 @@
                         <div class="comparison-cell">Considerations</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Most affordable option ($220/mo)</div>
-                        <div class="comparison-cell">⚠️ Less visual than Monday.com</div>
+                        <div class="comparison-cell">✅ Most affordable at $220/month</div>
+                        <div class="comparison-cell">⚠️ Dashboards less powerful than competitors</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Intuitive, easy to learn</div>
-                        <div class="comparison-cell">⚠️ Limited customization vs Smartsheet</div>
+                        <div class="comparison-cell">✅ Easy to learn, minimal training needed</div>
+                        <div class="comparison-cell">⚠️ Limited visual customization options</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Proven, stable platform</div>
-                        <div class="comparison-cell">⚠️ Dashboards less robust</div>
+                        <div class="comparison-cell">✅ Proven platform, widely adopted</div>
+                        <div class="comparison-cell">⚠️ Less colorful than Monday.com</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ 100+ integrations included</div>
-                        <div class="comparison-cell">⚠️ Advanced features cost extra</div>
+                        <div class="comparison-cell">✅ Unlimited automations included</div>
+                        <div class="comparison-cell">⚠️ Portfolio features require upgrade</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Unlimited automations on Starter</div>
-                        <div class="comparison-cell">⚠️ Resource management requires upgrade</div>
+                        <div class="comparison-cell">✅ 100+ integrations at base tier</div>
+                        <div class="comparison-cell">⚠️ Advanced reporting costs extra</div>
                     </div>
                 </div>
             </div>
