--- a/monday.html
+++ b/monday.html
@@ -253,24 +253,24 @@
                         <div class="comparison-cell">Considerations</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Most intuitive interface</div>
-                        <div class="comparison-cell">⚠️ Mid-range pricing ($320/mo)</div>
+                        <div class="comparison-cell">✅ Beautiful, intuitive interface</div>
+                        <div class="comparison-cell">⚠️ Mid-tier pricing at $320/month</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Fastest setup (1-2 weeks)</div>
-                        <div class="comparison-cell">⚠️ Can become expensive at scale</div>
+                        <div class="comparison-cell">✅ Fastest setup time (1-2 weeks)</div>
+                        <div class="comparison-cell">⚠️ Automation runs have monthly limits</div>
                     </div>
                     <div class="comparison-row">
-                        <div class="comparison-cell">✅ Highest team adoption</div>
-                        <div class="comparison-cell">⚠️ Less enterprise features than Smartsheet</div>
+                        <div class="comparison-cell">✅ Highest team adoption rate</div>
+                        <div class="comparison-cell">⚠️ Can get expensive as team grows</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell">✅ Powerful no-code automation</div>
-                        <div class="comparison-cell">⚠️ Automation runs have limits</div>
+                        <div class="comparison-cell">⚠️ Fewer compliance features than Smartsheet</div>
                     </div>
                     <div class="comparison-row">
                         <div class="comparison-cell">✅ Excellent visual dashboards</div>
-                        <div class="comparison-cell">⚠️ Advanced formulas less powerful</div>
+                        <div class="comparison-cell">⚠️ Complex formulas less powerful</div>
                     </div>
                 </div>
             </div>
